--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Steven Gregory">
   <title>ServiceNow Solution Center</title>
-  <link href="styles/main.css" rel="stylesheet">
+  <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
   <div ng-include="'app/layout/shell.html'"></div>
